fix overflow

--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 /* Box Model Fix */
 html {
     box-sizing: border-box;
-    overflow-x: hidden;
 }
 
 *,
@@ -20,6 +19,10 @@ html {
 @font-face {
     font-family: 'LazurskiC';
     src: url(fonts/LazurskiС.ttf);
+}
+
+body {
+    overflow-x: hidden;
 }
 
 header,
